--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -179,7 +179,7 @@
 }
 
 .offer__buy-btn::before {
-  content: ' ';
+  content: '';
   position: absolute;
   bottom: -10px;
   left: 5px;
@@ -1147,6 +1147,7 @@
   font-weight: 900;
   line-height: 84px;
   color: #333333;
+  text-decoration: none;
 }
 
 .contacts__text {
@@ -1385,7 +1386,6 @@
   .contacts__email, .contacts__phone {
     font-size: 64px;
     line-height: 64px;
-    color: #333333;
   }
   .contacts__left {
     width: 50%;
