--- a/assets/_promo.scss
+++ b/assets/_promo.scss
@@ -39,6 +39,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   &__play-btn {
@@ -90,8 +91,10 @@
 
     &__text {
       color: $color-text;
+      -webkit-text-stroke: 3px #fff;
       span > span {
         color: $color-white;
+        -webkit-text-stroke: unset;
         z-index: 0;
         top: 6.5%;
       }
@@ -141,6 +144,7 @@
       &__text {
         color: $color-text;
         padding-left: 69px;
+        -webkit-text-stroke: 2px #fff;
         span > span {
           color: $color-white;
           z-index: 0;
@@ -178,6 +182,14 @@
     &__buy-btn {
       margin: 0;
       margin-top: 50px;
+    }
+  }
+
+  .darken {
+    .promo {
+      &__text {
+        -webkit-text-stroke: 1px #fff;
+      }
     }
   }
 }
