--- a/assets/_elastic-slider.scss
+++ b/assets/_elastic-slider.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 
   .white,
   .darken {
@@ -19,23 +20,44 @@
     clip-path: unset;
     position: static;
   }
-  
+
   .top {
     z-index: 2;
     position: relative;
-    clip-path: url('#myPath');
   }
-  
+
   .bottom {
     z-index: 1;
     position: absolute;
   }
 
-  .svg-slider {
+  .svg-slider-right,
+  .svg-slider-left {
     position: absolute;
-    top: 0;
-    right: 0;
     z-index: 2;
-    transition: left .5s ease;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+    rect {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .svg-slider-right {
+    right: calc(-100% + 15px);
+  }
+
+  .svg-slider-left {
+    left: 0;
+  }
+
+  .clip-right {
+    clip-path: url('#myPath-right');
+  }
+
+  .clip-left {
+    clip-path: url('#myPath-left');
   }
 }
