--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1704,6 +1704,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .elastic .white,
@@ -1725,7 +1726,6 @@
 .elastic .top {
   z-index: 2;
   position: relative;
-  clip-path: url("#myPath");
 }
 
 .elastic .bottom {
@@ -1733,12 +1733,35 @@
   position: absolute;
 }
 
-.elastic .svg-slider {
+.elastic .svg-slider-right,
+.elastic .svg-slider-left {
   position: absolute;
-  top: 0;
-  right: 0;
   z-index: 2;
-  transition: left .5s ease;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.elastic .svg-slider-right rect,
+.elastic .svg-slider-left rect {
+  width: 100%;
+  height: 100%;
+}
+
+.elastic .svg-slider-right {
+  right: calc(-100% + 15px);
+}
+
+.elastic .svg-slider-left {
+  left: 0;
+}
+
+.elastic .clip-right {
+  clip-path: url("#myPath-right");
+}
+
+.elastic .clip-left {
+  clip-path: url("#myPath-left");
 }
 
 .modal-buy {
