--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1749,11 +1749,11 @@
 }
 
 .elastic .svg-slider-right {
-  right: calc(-100% + 15px);
+  right: calc(-100% + 10px);
 }
 
 .elastic .svg-slider-left {
-  left: 0;
+  left: calc(-100% + 10px);
 }
 
 .elastic .clip-right {
