--- a/assets/_privilege.scss
+++ b/assets/_privilege.scss
@@ -312,6 +312,20 @@
         opacity: 0;
         transform: translate(0, -150%);
       }
+
+      .check-item {
+        max-width: 376px;
+        width: 54%;
+      }
+
+      .check-card {
+        max-width: 272px;
+        width: 35%;
+        z-index: -1;
+        left: 20%;
+        top: -4.5%;
+        animation: infinite 3s ease check;
+      }
     }
 
     &__text {
@@ -543,6 +557,37 @@
       &__count span {
         -webkit-text-stroke: 1px #fff;
       }
+
+      .privileges {
+        &__img {
+          display: flex;
+          justify-content: center;
+        }
+
+        .basket-bag-big {
+          left: 31%;
+        }
+  
+        .basket-bag-middle {
+          right: 34%;
+          bottom: 20%;
+        }
+  
+        .middle-right {
+          right: 25%;
+          bottom: 13%;
+        }
+  
+        .basket-bag-top {
+          right: 45%;
+          bottom: 18%;
+        }
+  
+        .check-card {
+          left: 45%;
+          top: -2%;
+        }
+      }
     }
   }
 }
@@ -694,5 +739,19 @@
   100% {
     opacity: 1;
     transform: translate(0, 0);
+  }
+}
+
+@keyframes check {
+  0% {
+    transform: translate(-5%, -2%);
+  }
+
+  50% {
+    transform: translate(5%, 2%);
+  }
+
+  100% {
+    transform: translate(-5%, -2%);
   }
 }
