--- a/assets/_ticker.scss
+++ b/assets/_ticker.scss
@@ -1,11 +1,13 @@
 .marquee {
   position: relative;
   z-index: -5;
-  margin-top: 44px;
+  margin-top: 140px;
 
   overflow: hidden;
 
-  img {
+  max-height: 104px;
+
+  .second {
     display: flex;
   }
 }
@@ -21,7 +23,7 @@
 
 @media screen and (max-width: 550px) {
   .marquee {
-    margin-top: 25px;
+    margin-top: 75px;
 
     img {
       height: 70px;
