--- a/assets/_modals.scss
+++ b/assets/_modals.scss
@@ -1,175 +1,227 @@
-.overlay {
-}
-
-.modal-buy {
-  width: 100%;
-  height: 100vh;
+.modal {
   position: fixed;
- 
-  overflow: hidden;
-  background-color: #fff;
-  left: 0;
   top: 0;
+  left: 0;
 
-  z-index: 5;
+  width: 100%;
+  height: 100%;
+  z-index: 9000;
+
   display: none;
 
-  &.active {
-    display: block;
-  }
-  
-  &__wrapper {
-    max-width: 1440px;
+  &__overlay {
+    position: absolute;
+    z-index: 8900;
     width: 100%;
-    margin: 0 auto;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+
+    display: none;
+    opacity: 0;
   }
 
-  &__inner_wrapper {
-    margin-top: 10%;
+  &__wrapper {
+    position: absolute;
+    width: 30%;
+    height: 40%;
+
+    max-height: 520px;
+    top: 50%;
+    left: 50%;
+    background-color: #fff;
+    padding: 50px;
+    z-index: 8950;
+
+    border: 1px solid #000;
+    border-radius: 10px;
+
+    opacity: 0;
+    display: none;
+
+    @media screen and (max-width: 1440px) {
+      width: 50%;
+    }
   }
 
-  &__title {
-    text-transform: uppercase;
-    font-size: 48px;
-    font-weight: 900;
+  &__back {
+    position: absolute;
+    width: 30%;
+    height: 40%;
+    max-height: 520px;
+    top: 50%;
+    left: 50%;
+    background-color: #FDC300;
+    z-index: 8940;
+    border: 1px solid #000;
+    border-radius: 10px;
+
+    opacity: 0;
+    display: none;
+
+    @media screen and (max-width: 1440px) {
+      width: 50%;
+    }
   }
 
-  &__purchase_card,
-  &__title {
-    max-width: 690px;
-    margin: 0 auto;
+  &__title-wrapper {
+    display: flex;
+    position: relative;
   }
 
-  &__purchase_card {
-    input {
-      width: 100%;
+  &__close {
+    width: 64px;
+    height: 64px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #333;
+    border-radius: 50px;
 
-      font-size: 36px;
-      font-weight: 400;
-      line-height: 42px;
+    &:hover {
+      cursor: pointer;
+    }
 
-      border: none;
-      border-bottom: 2px solid black;
-      outline: none;
-
-      &::placeholder {
-        color: rgba(0, 0, 0, 0.3);
-      }
-
+    span {
+      width: 36px;
+      height: 3px;
+      background-color: #fff;
+      position: absolute;
+      top: 50%;
+      left: 50%;
       &:first-child {
-        margin-top: 60px;
+        transform: translate3d(-50%, -50%, 0) rotate(45deg);
       }
+
+      &:last-child {
+        transform: translate3d(-50%, -50%, 0) rotate(-45deg);
+      }
+    }
+  }
+
+  &__title {
+    font-size: 34px;
+    font-weight: 900;
+    line-height: 38px;
+    color: #333;
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+
+    input {
+      border: none;
+      font-size: 26px;
+      font-weight: 400;
+      line-height: 32px;
+      color: #333;
+      border-bottom: 2px solid #000;
+      outline: none;
 
       &:not(:first-child) {
         margin-top: 30px;
       }
 
-      &[type='checkbox'] {
-        position: absolute;
-        z-index: -5;
-        opacity: 0;
-
-        margin: 0;
-      }
-
-      &[type='checkbox'] + label {
-        display: inline-flex;
-        align-items: center;
-        user-select: none;
-
-        &::before {
-          content: '';
-          display: inline-block;
-          width: 0.75em;
-          height: 0.75em;
-          border: 1px solid $color-text;
-
-          margin-right: 0.75em;
-          background-color: $color-text;
-          background-repeat: no-repeat;
-          background-position: center center;
-          background-size: 50% 50%;
-        }
-
-        &:hover {
-          cursor: pointer;
-        }
-      }
-
-      &[type='checkbox']:checked + label {
-        &::before {
-          border-color: $color-main;
-          background-color: $color-main;
-          background-image: url('../pictures/check.svg');
-        }
-      }
-    }
-  }
-
-  &__consent-purchase {
-    margin-top: 30px;
-    font-size: 14px;
-    font-weight: 400;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-
-  &__purchase-btn {
-    margin: 0;
-    padding: 22px 95px;
-    background-color: #ffffff;
-    &::before {
-      background-color: $color-main;
-    }
-  }
-
-  &__hint {
-    // max-width: 931px;
-    width: 100%;
-    // margin-left: 374px;
-    margin-top: 50px;
-
-    font-size: 36px;
-    font-weight: 400;
-    line-height: 42px;
-
-    color: rgba(0, 0, 0, 0.3);
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .modal-buy {
-    &__title {
-      padding: 0 18px;
-      font-size: 24px;
-      line-height: 28px;
-    }
-
-    &__purchase_card {
-      padding: 0 18px;
-      input {
-        font-size: 18px;
-        line-height: 21px;
-        border-bottom: 2px solid #333;
+      &::placeholder {
+        color: rgba(0, 0, 0, 0.3);
       }
     }
 
-    &__consent-purchase {
-      flex-direction: column;
-      align-items: center;
-    }
-
-    &__purchase-btn {
+    label {
       margin-top: 20px;
-      padding: 19px 82px;
+    }
+
+    input[type='checkbox'] {
+      position: absolute;
+      z-index: -5;
+      opacity: 0;
+    }
+
+    input[type='checkbox'] + label {
+      display: inline-flex;
+      align-items: center;
+      user-select: none;
+      &::before {
+        content: '';
+        display: inline-block;
+        width: 0.75em;
+        height: 0.75em;
+        flex-shrink: 0;
+        flex-grow: 0;
+        border: 1px solid $color-text;
+
+        margin-right: 0.75em;
+        background-color: $color-text;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 50% 50%;
+      }
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    input[type='checkbox']:checked + label {
+      &::before {
+        border-color: $color-main;
+        background-color: $color-main;
+        background-image: url('../pictures/check.svg');
+      }
+    }
+  }
+
+  &__button-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+    position: relative;
+    
+
+    button[type='submit'] {
+      font-weight: 500;
       font-size: 18px;
       line-height: 21px;
-    }
+      padding: 22px 95px;
+      border: 2px solid #333;
+      border-radius: 40px;
+      background-color: #fff;
+      outline: none;
 
-    &__hint {
-      font-size: 12px;
-      line-height: 14px;
+      position: absolute;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        top: 5px;
+        left: 2px;
+        width: 100%;
+        height: 100%;
+        background-color: #fdc300;
+        border: 2px solid #333;
+        border-radius: 40px;
+      }
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      &:active {
+        transform: translate(5px, 10px);
+        -webkit-transform: translate(5px, 10px);
+        &::before {
+          content: none;
+        }
+      }
     }
   }
 }
