--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1778,24 +1778,18 @@
 .elastic .svg-slider-right,
 .elastic .svg-slider-left {
   position: fixed;
-  z-index: 2;
+  z-index: 5;
   top: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.elastic .svg-slider-right rect,
-.elastic .svg-slider-left rect {
-  width: 100%;
+  width: 50px;
   height: 100%;
 }
 
 .elastic .svg-slider-right {
-  right: calc(-100% + 67px);
+  right: 0;
 }
 
-.elastic .svg-slider-right > rect {
-  transform: translateX(60px);
+.elastic .svg-slider-right path {
+  transform: translateX(10px);
 }
 
 @media screen and (max-width: 425px) {
